--- a/src/WebApp/Pages/Notesheets/Details.cshtml
+++ b/src/WebApp/Pages/Notesheets/Details.cshtml
@@ -7,180 +7,230 @@
 }
 <div class="container">
     <div>
-        <h1> Notesheet Details</h1>
-        <br />
-        <br />
-        @*<div class="row">*@
-        <img src="~/posoco.jpg" alt="">
-        @*</div>*@
-        <br />
-
-        <hr />
-        <dl class="row">
-
-
-            <div class="row">
-
-                <div class="col-sm-8"> <span class="font-weight-bold">Reference No:</span>@Html.DisplayFor(model => model.Notesheet.ReferenceNo) <span class="font-weight-bold tab">.       Date:</span>@Html.DisplayFor(model => model.Date)</div>
-                @*<div class="col-sm-4"><span class="font-weight-bold">Date:</span>@Html.DisplayFor(model => model.Date)</div>*@
+        <div class="row">
+            <div class="col-md-12" style="text-align: center;">
+                <table style="margin: auto;">
+                    <tbody>
+                        <tr>
+                            <td style="text-align:center">
+                                <span><b>Power System Operation Coorporation Limited</b></span><br>
+                                <span style="font-size:small"><b>(A Government of India Enterprise)</b></span><br>
+                                <span><b>WRLDC</b></span>
+                            </td>
+                            <td>
+                                <img src="~/assets/img/logo.png" width="100px" height="100px" style="float:right">
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
-            <dt class="col-sm-12">
-                1.Package Name:
-            </dt>
-            <dd class="col-sm-12">
-                @Html.DisplayFor(model => model.Notesheet.PackageName)
-            </dd>
-            <dt class="col-sm-12">
-                2.Type of Contract:
-            </dt>
-            <dd class="col-sm-12">
-                @Html.DisplayFor(model => model.Notesheet.Type)
-            </dd>
-            <dt class="col-sm-12">
-                3.Description:
-            </dt>
-            <dd class="col-sm-12">
-                @Html.DisplayFor(model => model.Notesheet.Description)
-            </dd>
-            <dt class="col-sm-12">
-                4.Scope of Works for Supply/SITC/Works/AMC:
-            </dt>
-            <dd class="col-sm-12">
-                @Html.DisplayFor(model => model.Notesheet.ScopeOfWork)
-            </dd>
-            <dt class="col-sm-12">
-                5.Technical Specification/Golden Parameters(For Gem Only):
-            </dt>
-            <dd class="col-sm-12">
-                @Html.DisplayFor(model => model.Notesheet.Technical_Specification)
-            </dd>
-            <dt class="col-sm-12">
-                6.Estimated Cost (Inclusive of G.S.T.) (₹):
-            </dt>
-            <dd class="col-sm-12">
-                @Html.DisplayFor(model => model.Notesheet.EstimatedCost)
-            </dd>
-            <dt class="col-sm-12">
-                7.Budgetary Offer Reference No.:
-            </dt>
-            <dd class="col-sm-12">
-                @Html.DisplayFor(model => model.Notesheet.BudgetOfferReference)
-            </dd>
-            <dt class="col-sm-12">
-                8.Budgetary Offer Date:
-            </dt>
-            <dd class="col-sm-12">
-                @Html.DisplayFor(model => model.BudgetOfferDate)
-            </dd>
-            <dt class="col-sm-12">
-                9.Budgetary Offer Validity:
-            </dt>
-            <dd class="col-sm-12">
-                @Html.DisplayFor(model => model.Notesheet.BudgetOfferValidity)
-            </dd>
-            <dt class="col-sm-12">
-                10.Budgetary Offer Address:
-            </dt>
-            <dd class="col-sm-12">
-                @Html.DisplayFor(model => model.Notesheet.BudgetOfferAddress)
-            </dd>
-            <dt class="col-sm-12">
-                11.Bill of Quantities without Price:
-            </dt>
-            <dd class="col-sm-12">
-                @Html.DisplayFor(model => model.Notesheet.BillOfQuantity)
-            </dd>
-            <dt class="col-sm-12">
-                12.Guarantee/Warranty:
-            </dt>
-            <dd class="col-sm-12">
-                @Html.DisplayFor(model => model.Notesheet.Guarantee_Warranty)
-            </dd>
-            <dt class="col-sm-12">
-                13.Payment terms & CPG:
-            </dt>
-            <dd class="col-sm-12">
-                @Html.DisplayFor(model => model.Notesheet.Payment_Terms_CPG)
-            </dd>
-            <dt class="col-sm-12">
-                14.Mode of Tender preferred:
-            </dt>
-            <dd class="col-sm-12">
-                @Html.DisplayFor(model => model.Notesheet.ModeOfTerm)
-            </dd>
-            <dt class="col-sm-12">
-                15.Type of Bidding process preferred:
-            </dt>
-            <dd class="col-sm-12">
-                @Html.DisplayFor(model => model.Notesheet.TypeOfBidding)
-            </dd>
-            <dt class="col-sm-12">
-                16.List of Parties:
-            </dt>
-            <dd class="col-sm-12">
-                @Html.DisplayFor(model => model.Notesheet.ListOfParties)
-            </dd>
-            <dt class="col-sm-12">
-                17.GeM Non-Availability Certificate:
-            </dt>
-            <dd class="col-sm-12">
-                @Html.DisplayFor(model => model.Notesheet.GeMNonAvailabilityCertificate)
-            </dd>
-            <dt class="col-sm-12">
-                18.Work Completion Schedule/Delivery time schedule:
-            </dt>
-            <dd class="col-sm-12">
-                @Html.DisplayFor(model => model.Notesheet.WorkCompletionSchedule)
-            </dd>
-            <dt class="col-sm-12">
-                19.Special Conditions of Contract:
-            </dt>
-            <dd class="col-sm-12">
-                @Html.DisplayFor(model => model.Notesheet.SpecialConditionsOfContract)
-            </dd>
-            <dt class="col-sm-12">
-                20.Budget Provision:
-            </dt>
-            <dd class="col-sm-12">
-                @Html.DisplayFor(model => model.Notesheet.BudgetProvision)
-            </dd>
-            <dt class="col-sm-12">
-                21.Proposal for which Approval sought:
-            </dt>
-            <dd class="col-sm-12">
+        </div>
+        <br />
+        <div class="row">
+            <div class="col-md-12">
+                <table width="100%">
+                    <tr>
+                        <td>
+                            <span class="sectionHeading">Reference Number: </span>
+                            <span>@Html.DisplayFor(model => model.Notesheet.ReferenceNo)</span>
+                        </td>
+                        <td class="rightAlign">
+                            <span class="sectionHeading">Date: </span>
+                            <span>@Html.DisplayFor(model => model.Date)</span>
+                        </td>
+                    </tr>
+                </table>
+                <br />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <span class="sectionHeading">Indenting Department: </span>
+                <span>@Html.DisplayFor(model => model.Notesheet.IndentingDept)</span><br />
 
-                @foreach (var pOptTxt in Model.ProposalForApprovals)
+                <span class="sectionHeading">Package Name</span>
+                <p>
+                    @Html.DisplayFor(model => model.Notesheet.PackageName)
+                </p>
+
+                <span class="sectionHeading">Type of Contract</span>
+                <p>
+                    <span>@Html.DisplayFor(model => model.Notesheet.Type)</span>
+                </p>
+
+                <span class="sectionHeading">Description</span>
+                <p>
+                    <span>@Html.DisplayFor(model => model.Notesheet.Description)</span>
+                </p>
+
+                <span class="sectionHeading">Scope of Works for Supply/SITC/Works/AMC</span>
+                <p>
+                    <span>@Html.DisplayFor(model => model.Notesheet.ScopeOfWork)</span>
+                </p>
+
+                <span class="sectionHeading">Technical Specification/Golden Parameters(For Gem Only)</span>
+                <p>
+                    <span>@Html.DisplayFor(model => model.Notesheet.Technical_Specification)</span>
+                </p>
+
+                <span class="sectionHeading">Estimated Cost (Inclusive of G.S.T.) (₹)</span>
+                <p>
+                    <span>@Html.DisplayFor(model => model.Notesheet.EstimatedCost)</span>
+                    <span id="costEstmateWords">@Html.DisplayFor(model => model.Notesheet.EstimatedCost)</span>
+                </p>
+
+                <span class="sectionHeading">Budgetary Details</span>
+                <div>
+                    <p class="leftMargin1cm"><b>a. Reference No.: </b>@Html.DisplayFor(model => model.Notesheet.BudgetOfferReference)</p>
+
+                    <p class="leftMargin1cm"><b>b. Date: </b>@Html.DisplayFor(model => model.BudgetOfferDate)</p>
+
+                    <p class="leftMargin1cm"><b>c. Validity: </b>@Html.DisplayFor(model => model.Notesheet.BudgetOfferValidity)</p>
+
+                    <p class="leftMargin1cm"><b>d. Address</b></p>
+                    <p class="leftMargin1cm">
+                        @Html.DisplayFor(model => model.Notesheet.BudgetOfferAddress)
+                    </p>
+                </div>
+
+                <span class="sectionHeading">Bill of Quantities without Price</span>
+                <p>
+                    <span>@Html.DisplayFor(model => model.Notesheet.BillOfQuantity)</span>
+                </p>
+
+                <span class="sectionHeading">Guarantee/Warranty</span>
+                <p>
+                    <span>@Html.DisplayFor(model => model.Notesheet.Guarantee_Warranty)</span>
+                </p>
+
+                <span class="sectionHeading">Payment terms & CPG</span>
+                <p>
+                    <span>@Html.DisplayFor(model => model.Notesheet.Payment_Terms_CPG)</span>
+                </p>
+
+                <span class="sectionHeading">Mode of Tender preferred</span>
+                <p>
+                    <span> @Html.DisplayFor(model => model.Notesheet.ModeOfTerm)</span>
+                </p>
+
+                @if (!string.IsNullOrWhiteSpace(Model.Notesheet.ReasonsForModeOfTender))
                 {
-                    <span>@pOptTxt.ProposalOption</span>
-                    <br />
+                    <span class="sectionHeading">Reasons For Mode Of Tender</span>
+                    <p>
+                        <span> @Html.DisplayFor(model => model.Notesheet.ReasonsForModeOfTender)</span>
+                    </p>
                 }
-            </dd>
-            <dt class="col-sm-12">
-                22.DOP Clause No. and Section:
-            </dt>
-            <dd class="col-sm-12">
-                @Html.DisplayFor(model => model.Notesheet.DopClause)
-            </dd>
-            @*@String.Join(",", Model.Notesheet.ProposalForApprovals)*@
 
-            <dt class="col-sm-12">
-                23.Competent Authority for granting approval:
-            </dt>
-            <dd class="col-sm-12">
-                @Html.DisplayFor(model => model.Notesheet.ApprovingAuthority)
-            </dd>
+                @if (!string.IsNullOrWhiteSpace(Model.Notesheet.ProprietaryArticleCertificate))
+                {
+                    <span class="sectionHeading">Proprietary Article Certificate</span>
+                    <p>
+                        <span> @Html.DisplayFor(model => model.Notesheet.ProprietaryArticleCertificate)</span>
+                    </p>
+                }
 
-        </dl>
-    </div>
-    <div>
-        <a asp-page="./Edit" asp-route-id="@Model.Notesheet.Id" class="btn btn-info">Edit</a> |
-        <a asp-page="./Index" class="btn btn-primary">Back to List</a>
+                <span class="sectionHeading">Type of Bidding process preferred</span>
+                <p>
+                    <span>  @Html.DisplayFor(model => model.Notesheet.TypeOfBidding)</span>
+                </p>
+
+                @if (!string.IsNullOrWhiteSpace(Model.Notesheet.ListOfParties))
+                {
+                    <span class="sectionHeading">List of Parties</span>
+                    <p>
+                        <span> @Html.DisplayFor(model => model.Notesheet.ListOfParties)</span>
+                    </p>
+                }
+
+                <span class="sectionHeading">GeM Non-Availability Certificate</span>
+                <p>
+                    <span>@Html.DisplayFor(model => model.Notesheet.GeMNonAvailabilityCertificate)</span>
+                </p>
+
+                <span class="sectionHeading">Work Completion Schedule/Delivery time schedule</span>
+                <p>
+                    <span> @Html.DisplayFor(model => model.Notesheet.WorkCompletionSchedule)</span>
+                </p>
+
+                <span class="sectionHeading">Special Conditions of Contract:</span>
+                <p>
+                    <span>@Html.DisplayFor(model => model.Notesheet.SpecialConditionsOfContract)</span>
+                </p>
+
+                @if (!string.IsNullOrWhiteSpace(Model.Notesheet.OtherPointsRelevantWithCase))
+                {
+                    <span class="sectionHeading">Any other points relevant with case</span>
+                    <p>
+                        <span> @Html.DisplayFor(model => model.Notesheet.OtherPointsRelevantWithCase)</span>
+                    </p>
+                }
+
+                <span class="sectionHeading">Budget Provision:</span>
+                <div>
+                    <p class="leftMargin1cm"><b>a. Section: </b> @Html.DisplayFor(model => model.Notesheet.BudgetProvision)</p>
+
+                    <p class="leftMargin1cm"><b>b. Serial No.: </b>@Html.DisplayFor(model => model.Notesheet.BPSerialNo)</p>
+
+                    <p class="leftMargin1cm"><b>c. Under the head of: </b>@Html.DisplayFor(model => model.Notesheet.BPUnderHead)</p>
+
+                </div>
+
+                <span class="sectionHeading">Proposal for which Approval sought:</span>
+                <div>
+                    @foreach (var pOptTxt in Model.ProposalForApprovals)
+                    {
+
+                        <span>@pOptTxt.ProposalOption</span>
+                        <br />
+
+                    }
+                </div>
+
+                <span class="sectionHeading">DOP Clause No.:</span>
+                <p>
+                    <span> @Html.DisplayFor(model => model.Notesheet.DopClause)</span>
+                </p>
+
+                <span class="sectionHeading">DOP Section No.:</span>
+                <p>
+                    <span> @Html.DisplayFor(model => model.Notesheet.DopSection)</span>
+                </p>
+
+                <span class="sectionHeading">Competent Authority for granting approval:</span>
+                <p>
+                    <span>  @Html.DisplayFor(model => model.Notesheet.ApprovingAuthority)</span>
+                </p>
+            </div>
+        </div>
+        <div>
+            <a asp-page="./Edit" asp-route-id="@Model.Notesheet.Id" class="btn btn-info">Edit</a> |
+            <a asp-page="./Index" class="btn btn-primary">Back to List</a>
+        </div>
     </div>
 </div>
 @section Scripts{
+    <script src="~/js/numToWords.js"></script>
+    <script>
+        window.onload = function () {
+            var costEstWrdsEl = document.getElementById("costEstmateWords");
+            costEstWrdsEl.textContent = " (" + inWords(costEstWrdsEl.textContent) + ")";
+        }
+    </script>
     <style>
         body {
             background-color: transparent;
+        }
+
+        .sectionHeading {
+            font-weight: bold;
+        }
+
+        .rightAlign {
+            text-align: right;
+        }
+
+        .leftMargin1cm {
+            margin-left: 1cm;
         }
     </style>
 }
