--- a/src/WebApp/Pages/Shared/_AuthorizedPartial.cshtml
+++ b/src/WebApp/Pages/Shared/_AuthorizedPartial.cshtml
@@ -25,4 +25,7 @@
     <li class="nav-item">
         <a class="nav-link text-light" asp-page="/Users/Details">My Details</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link text-light" asp-page="/Notesheets/Index">Notesheets</a>
+    </li>
 }
