--- a/src/WebApp/Pages/Notesheets/Delete.cshtml
+++ b/src/WebApp/Pages/Notesheets/Delete.cshtml
@@ -5,11 +5,8 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Notesheet</h4>
+<div class="container">
+    <h3>Are you sure you want to delete this Notesheet?</h3>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -73,7 +70,7 @@
             @Html.DisplayFor(model => model.Notesheet.LastModified)
         </dd>
     </dl>
-    
+
     <form method="post">
         <input type="hidden" asp-for="Notesheet.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
