--- a/src/WebApp/Pages/Index.cshtml
+++ b/src/WebApp/Pages/Index.cshtml
@@ -8,4 +8,6 @@
     <h1 class="display-4">Welcome to Contracts Management Application</h1>
     <br />
     <h3><a asp-page="/Notesheets/Index">View Notsheets</a></h3>
+    <br />
+    <h3><a asp-page="/Notesheets/Create">Create Notsheet</a></h3>
 </div>
