--- a/src/WebApp/Pages/Notesheets/Create.cshtml
+++ b/src/WebApp/Pages/Notesheets/Create.cshtml
@@ -157,12 +157,12 @@
                     <span asp-validation-for="Notesheet.BudgetProvision" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Notesheet.BPSerialNo" class="control-label">BPSerialNo</label>
+                    <label asp-for="Notesheet.BPSerialNo" class="control-label">Budget Provision Serial Number</label>
                     <input asp-for="Notesheet.BPSerialNo" class="form-control" />
                     <span asp-validation-for="Notesheet.BPSerialNo" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Notesheet.BPUnderHead" class="control-label">BP Under Head</label>
+                    <label asp-for="Notesheet.BPUnderHead" class="control-label">Budget Provision Under Head</label>
                     <input asp-for="Notesheet.BPUnderHead" class="form-control" />
                     <span asp-validation-for="Notesheet.BPUnderHead" class="text-danger"></span>
                 </div>
