--- a/src/WebApp/Pages/Notesheets/Edit.cshtml
+++ b/src/WebApp/Pages/Notesheets/Edit.cshtml
@@ -155,17 +155,17 @@
                     <span asp-validation-for="Notesheet.BudgetProvision" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Notesheet.BPSerialNo" class="control-label">BPSerialNo</label>
+                    <label asp-for="Notesheet.BPSerialNo" class="control-label">Budget Provision Serial No.</label>
                     <input asp-for="Notesheet.BPSerialNo" class="form-control" />
                     <span asp-validation-for="Notesheet.BPSerialNo" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Notesheet.BPUnderHead" class="control-label">BP Under Head</label>
+                    <label asp-for="Notesheet.BPUnderHead" class="control-label">Budget Provision Under Head</label>
                     <input asp-for="Notesheet.BPUnderHead" class="form-control" />
                     <span asp-validation-for="Notesheet.BPUnderHead" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label class="control-label">ProposalForApprovals</label><br />
+                    <label class="control-label">Proposal For Approvals</label><br />
                     @foreach (var pAppr in Model.ProposalForApprovals)
                     {
                         <span>@pAppr.ProposalOption</span><span> | <a asp-page="/ProposalForApprovals/Delete" asp-route-id="@pAppr.Id">Delete</a></span>
